Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zad2-deployment
  namespace: zad2-ns
  labels:
    app: zad2-server
  annotations:
    kubernetes.io/change-cause: "v1.9"
spec:
  replicas: 4
  selector:
    matchLabels:
      app: zad2-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 5
  template:
    metadata:
      labels:
        app: zad2-server
    spec:
      containers:
      - name: zad2-server
        image: scoutertf2/zad2:9bcfcc33d12759aeb91a77afc43cd0495906a267
      dnsPolicy: ClusterFirst
      restartPolicy: Always
