Node-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zad2-node-service
  namespace: zad2-ns
spec:
  type: NodePort
  selector:
    app: zad2-server
  ports:
    - port: 80
      targetPort: 80
