Ingress-Service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zad2-ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - host: zad2.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zad2-node-service
            port:
              number: 80
